--- a/config/config.env
+++ b/config/config.env
@@ -2,8 +2,8 @@ PORT=3000
 MONGO_URI=mongodb://localhost:27017/task_management
 JWT_SECRET_KEY="sjdjwiie2iwieu83suduis"
 
-EMAIL_HOST='smtp.gmail.com'
+EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
-EMAIL_USER='mramzanali258@gmail.com'
-EMAIL_PASS='sixsahjzcthvhehh'
-EMAIL_FROM='mramzanali258@gmail.com'
+EMAIL_USER=mramzanali258@gmail.com
+EMAIL_PASS=sixsahjzcthvhehh
+EMAIL_FROM=webiso@clout.wiki
