--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-handlebars": "^7.1.2",
+    "handlebars": "^4.7.8",
+    "hbs": "^4.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.2",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.7",
+    "nodemailer-express-handlebars": "^6.1.0",
     "nodemon": "^3.0.1"
   }
 }
