--- a/config/config.env
+++ b/config/config.env
@@ -6,4 +6,4 @@ EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_USER=mramzanali258@gmail.com
 EMAIL_PASS=sixsahjzcthvhehh
-EMAIL_FROM=webiso@clout.wiki
+EMAIL_FROM=mramzanali258@gmail.com
